// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas sobre el GifGrid Debe de coincidir con el matchsnapshot 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__backInLeft"
  >
    Blue Exorcist
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas sobre el GifGrid debe de mostrar items cuando se cargan imagenes con useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__backInLeft"
  >
    Blue Exorcist
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier Cosa"
      url="https://localhost/cualquier/cosa.png"
    />
    <GifGridItem
      id="123"
      key="123"
      title="Cualquier Cosa"
      url="https://localhost/cualquier/cosa.png"
    />
  </div>
</Fragment>
`;
